Completely reoriented for finding shortcuts.  Now ready to add finishing touches to the driver and try testing.